--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -1,6 +1,21 @@
-*{
-	margin:0;
-	padding:0;
-	
-}
+* {
+  margin: 0;
+  padding: 0;
 
+}
+body{
+	font-family: 'Roboto', sans-serif;
+
+}
+/*Screen 4*/
+#createUser {
+  img {
+    width: 42%;
+    margin-top: 30px;
+  }
+
+  .yellow-button {
+    background-color: $yellow-buttons;
+    margin-top: 26px;
+  }
+}
