working on validations

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -21,4 +21,8 @@ body {
     background-color: $yellow-buttons;
     margin-top: 26px;
   }
+  .container-inputs{
+        padding-left: 10px;
+  }
 }
+
