--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -22,3 +22,18 @@ body {
     margin-top: 26px;
   }
 }
+
+/*Screen 2 */
+#validacion{
+img.responsive-img, {
+    max-width: 100%;
+    height: auto;
+    margin: 5px;
+    padding:15px;
+  }
+
+a {
+    background-color: transparent;
+    color: #2bbbad;
+ }
+}
