working on index2 validations

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -52,5 +52,8 @@ body {
     background-color: transparent;
     color: #2bbbad;
   }
+  #accept-continue{
+    background-color: $yellow-buttons;
+  }
 }
 
