Screen 2, 6 y 7 sin estilos

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -40,5 +40,11 @@ a {
     background-color: transparent;
     color: #2bbbad;
  }
+ img{
+  width: 50%;
+ }
+ img.responsive-img.left{
+  width:10%;
+ }
 }
 
