updated styles html 6 and 7

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -79,3 +79,31 @@ a {
 		font-weight: 700;
 	}
 }
+
+/*Screen 6 */
+.formulario{
+  margin-left: 13%;
+}
+ #card #img-s6 {
+    width: 7%;
+    margin-top: 18px;
+    position: absolute;
+  }
+  #img-scan{
+    width: 7%;
+  }
+  #mes{
+  width:50%;
+  margin-left:-12%;
+}
+#ano{
+  width:50%;
+}
+
+/*Screen 7 */
+#screen7{
+  img #img-s7 {
+    width: 40%;
+    margin-top: 35px;
+  }
+}
