last changes Mai

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -202,8 +202,7 @@ h4{
 .containers7{
 	background-color: #38052A;
 	color: #fff;
-	height: 100vh;
-}
+    height: 155vh;}
 .fa.fa-user-circle {
     display: block;
     text-align: right;
