--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -8,24 +8,29 @@ body {
 }
 /*Screen 4*/
 #createUser {
-  .lock{
+  .lock {
     img {
-    width: 62%;}
+      width: 62%;
+    }
   }
-  form{
+
+  form {
     margin-top: -61px;
-img{
-  width: 59%;}
+
+    img {
+      width: 59%;
+    }
   }
+
   h4 {
     font-size: 1.28rem;
     color: black;
-        margin-top: -49px;
+    margin-top: -49px;
   }
 
   .yellow-button {
     background-color: $yellow-buttons;
-        margin-top: -101px;
+    margin-top: -101px;
   }
 
   .container-inputs {
@@ -41,216 +46,187 @@ img{
   color: #9f9f9f !important;
   cursor: default;
 }*/
-
-
-
 /*Screen 2 */
-#validacion{
-.col {
- img{
- width: 40%;
- padding-top:20px;
-}
-}
-input{
-margin-bottom:15px;
-}
-a {
-   background-color: transparent;
-   color: #2bbbad ;
-}
+#validacion {
+  .col {
+    img {
+      width: 40%;
+      padding-top: 20px;
+    }
+  }
 
-#accept-continue{
+  input {
+    margin-bottom: 15px;
+  }
+
+  a {
+    background-color: transparent;
+    color: #2bbbad;
+  }
+
+  #accept-continue {
     background-color: $yellow-buttons;
   }
 }
 /*Screen 2 */
-#validacion{
-.col {
-  img{
-  width: 40%;
-  padding-top:20px;
-}
-}
-input{
-margin-bottom:15px;
-}
-a {
+#validacion {
+  .col {
+    img {
+      width: 40%;
+      padding-top: 20px;
+    }
+  }
+
+  input {
+    margin-bottom: 15px;
+  }
+
+  a {
     background-color: transparent;
     color: #2bbbad;
- }
+  }
 }
 /*Screen 6 */
-.formulario{
+.formulario {
   margin-left: 13%;
 }
- #card #img-s6 {
-    width: 4%;
-    margin-top: 35px;
-    position: absolute;
-    margin-left: -30%;
-  }
-  #img-scan{
-    width: 7%;
-  }
-  #mes{
-  width:50%;
-  margin-left:-12%;
+
+#card #img-s6 {
+  width: 4%;
+  margin-top: 35px;
+  position: absolute;
+  margin-left: -30%;
 }
-#ano{
-  width:50%;
+
+#img-scan {
+  width: 7%;
 }
+
+#mes {
+  width: 50%;
+  margin-left: -12%;
+}
+
+#ano {
+  width: 50%;
+}
+
 .row .col.s12 {
-    width: 100%;
-    padding: 35px;
-}
-/*Screen 7 */
-.face{
-  background-color:#451E36;
-}
-#img-face {
-  width: 44%;
-  margin-top: 86px;
-  }
-h4{
-  color:white;
-}
-#img-eye{
-  width:5%;
-}
-.col p {
-  color: #20746f;
-  font-size: 15px;
-  margin-bottom: 16px;
-}
-.row .col.s6 {
-    width: 100%;
-    margin-left: auto;
-    left: auto;
-    right: auto;
-    color:white;
-}
-.row .col.s8 {
-    width: 65.666667%;
-    padding: 50px;
-}
-.row .col.s6.send{
-    width: 20%;
-    margin-left: 15%;
-    left: auto;
-    right: auto;
-    color: #fff;
-}
-.row .col.s6.scn{
-    width: 20%;
-    margin-left: 15%;
-    left: auto;
-    right: auto;
-    color: #fff;
-}
-#img-lg{
-  width: 42%;
-}
-.col p.txt{
-  color:white;
-  text-align:center;
+  width: 100%;
+  padding: 35px;
 }
 /*Screen 6.1 */
-#foto{
-    width:42%;
+#foto {
+  width: 42%;
 }
 /*MAI*/
-.screen5-body{
-	background-color: $yellow-buttons;
-	text-align: center;
-	color: $purple-number;
-	font-family: $font-familyOpen;
-	.done-circle{
-		border: 3px solid #49233b;
-	    border-radius: 100%;
-	    padding: 9px;
-		display: inline-block;
-		margin: 239px 0 6px 0;
-		i{
-			font-size: 45px;
-		}
-	}
-	p{
-		font-weight: 700;
-	}
-}
+.screen5-body {
+  background-color: $yellow-buttons;
+  text-align: center;
+  color: $purple-number;
+  font-family: $font-familyOpen;
 
+  .done-circle {
+    border: 3px solid #49233b;
+    border-radius: 100%;
+    padding: 9px;
+    display: inline-block;
+    margin: 239px 0 6px 0;
+
+    i {
+      font-size: 45px;
+    }
+  }
+
+  p {
+    font-weight: 700;
+  }
+}
 /*Screen 6 */
-.formulario{
+.formulario {
   margin-left: 13%;
 }
- #card #img-s6 {
-    width: 7%;
-    margin-top: 18px;
-    position: absolute;
-  }
-  #img-scan{
-    width: 7%;
-  }
-  #mes{
-  width:50%;
-  margin-left:-12%;
+
+#card #img-s6 {
+  width: 7%;
+  margin-top: 18px;
+  position: absolute;
 }
-#ano{
-  width:50%;
+
+#img-scan {
+  width: 7%;
 }
-.containers7{
-	background-color: #38052A;
-	color: #fff;
-    height: 155vh;}
+
+#mes {
+  width: 50%;
+  margin-left: -12%;
+}
+
+#ano {
+  width: 50%;
+}
+
+.containers7 {
+  background-color: #38052a;
+  color: #fff;
+  height: 112vh !important;
+}
+
 .fa.fa-user-circle {
-    display: block;
-    text-align: right;
-    color: white;
-    margin-right: 24px;
-    margin-top: 18px;
-    font-size: 22px;
+  display: block;
+  text-align: right;
+  color: white;
+  margin-right: 24px;
+  margin-top: 18px;
+  font-size: 22px;
 }
+
 #img-face {
-    margin-top: 10px;
-}
-.mostrars7{
-	color: #09B599 !important;
-	margin-bottom: 20px;
-}
-#img-eye{
-	width: 23px;
+  margin-top: 10px;
 }
 
-.ultimos7{
-	padding-top: 7px;
-	padding-bottom: 7px;
-	margin-left: 20px;
+.mostrars7 {
+  color: #09b599 !important;
+  margin-bottom: 20px;
 }
-.imgs7{
-	margin-left: 30px;
+
+#img-eye {
+  width: 23px;
 }
+
+.ultimos7 {
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-left: 20px;
+}
+
+.imgs7 {
+  margin-left: 30px;
+}
+
 .lines7 {
-    margin-bottom: 20px;
-}
-i.fa.fa-angle-right {
-    margin-left: 71px;
-    color: white;
-    font-size: 20px;
+  margin-bottom: 20px;
 }
 
-#img-send, #img-scn {
-    width: 79px;
+i.fa.fa-angle-right {
+  margin-left: 71px;
+  color: white;
+  font-size: 20px;
 }
-.texts7{
-	color: white!important;
-	margin-bottom: 40px;
+
+#img-send,
+#img-scn {
+  width: 79px;
+}
+
+.texts7 {
+  color: white !important;
+  margin-bottom: 40px;
 }
 /*Screen 7 */
-#screen7{
+#screen7 {
   img #img-s7 {
     width: 40%;
     margin-top: 35px;
   }
 }
-
