--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,5 +2,6 @@
 @import '_variables.scss';
 @import '_screen3.scss';
 @import '_mixin.scss';
+@import '_screen7.scss';
 @import '_index.scss';
 @import '_bases.scss';
